# matcraft

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md
.ai-dev/: config.json  launch
.ai-dev/plans/: project-inception.md  topic-generator.md
.ai-dev/quality/: tools.json
.ai-dev/reviews/: project-inception_review.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  deployment.md  product.md  threat-model.md
docs/contracts/: cli.md
docs/decisions/: cluster-fill-vowel.md  o-ob-allomorphy.md  paradigm-pivot.md  plutser-sarno-taxonomy.md  stack.md
src/: main.rs
src/engine/: display.rs  generator.rs  grammar.rs  mod.rs  morpheme.rs  morpheme_tests.rs  morphemes.rs  paradigm.rs  paradigm_tests.rs
src/engine/display/: boxed.rs  explore.rs  form_block.rs  list.rs  mod.rs
src/engine/roots/: group1.rs  group2.rs  group3.rs  group4.rs  group5.rs  mod.rs
src/quality/: tools.json
tests/: cli.rs
